language_tests/source_files/invalid/optional_chaining_invalid.tr
// Test: Optional Chaining Errors
// Using `?.` on non-optional values should fail.

func main() {
    let profile = Profile { name: Name { value: "Ana" } }
    let _ = profile?.name
}

struct Name {
    value: string
}

struct Profile {
    name: Name
}
